--- a/css-lesson.css
+++ b/css-lesson.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color:red;
 
 }
 
@@ -99,4 +100,15 @@
 }
 .links{
     margin-left:30px;
+}
+h1 {
+  background-color: green;
+}
+
+div {
+  background-color: lightblue;
+}
+
+p {
+  background-color: yellow;
 }
